2010-11-09  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Shinichiro Hamaji.

        Fix for Bug 48984 - [Chromium] @media print crash due to paged media support
        https://bugs.webkit.org/show_bug.cgi?id=48984

        * printing/page-format-data-display-none-expected.txt: Added.
        * printing/page-format-data-display-none.html: Added.
2010-11-09  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Shinichiro Hamaji.

        Fix for Bug 48984 - [Chromium] @media print crash due to paged media support
        Page context has been inheriting from document element style that becomes null if display property is none.
        It should inherit from document style instead to properly handle direction property (and to avoid the null reference).
        https://bugs.webkit.org/show_bug.cgi?id=48984

        Test: printing/page-format-data-display-none.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::styleForPage): Page context inherits from
        document style.

Canonical link: https://commits.webkit.org/62108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71621 268f45cc-cd09-0410-ab3c-d52691b4dbfc